--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,24 +17,25 @@ keywords = ["search", "information", "retrieval"]
 [dependencies]
 byteorder = "0.4"
 memmap = "0.2"
-lazy_static = "0.1.15"
+lazy_static = "0.1"
 regex = "0.1"
-fst = "0.1.34"
+fst = ">= 0.1.34"
 atomicwrites = "0.0.14"
-tempfile = "2.0.0"
+tempfile = "2.0"
 rustc-serialize = "0.3.16"
-log = "0.3.5"
-combine = "1.3.0"
-tempdir = "0.3.4"
-bincode = "0.4.0"
+file-lock = "0.0.17"
+log = "0.3"
+combine = "1.3"
+tempdir = "0.3"
+bincode = "0.4"
 libc = "0.2.6"
 num_cpus = "0.2"
-itertools = "0.4.16"
-lz4 = "1.13.131"
-time = "0.1.34"
+itertools = "0.4"
+lz4 = "1.13"
+time = "0.1"
 uuid = "0.1"
-chan = "0.1.18"
-crossbeam = "0.2.10"
+chan = "0.1"
+crossbeam = "0.2"
 
 [dev-dependencies]
 rand = "0.3.13"
